--- a/Aphrodite/Aphrodite.Front/Views/Match/Index.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Match/Index.cshtml
@@ -10,7 +10,7 @@
     <table class="table">
         <thead>
             <tr>
-                <th>#</th>
+                <th>Id</th>
                 <th>Firstname</th>
             </tr>
         </thead>
@@ -18,7 +18,8 @@
             @foreach (var item in Model)
             {
                 <tr>
-                    <td>@item</td>
+                    <td>@item.Id</td>
+                    <td>@item.Name</td>
                 </tr>
             }
         </tbody>
