--- a/Aphrodite/Aphrodite.Front/Views/Shared/_ProfilePartial.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Shared/_ProfilePartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@Scripts.Render("~/Scripts/Facedate.js")
 <div class="row">
-    <div class="col-md-4 col-md-offset-4">
+    <div id="profile-box-wrapper" class="col-md-4 col-md-offset-4 ">
         @TempData["Match"]
 
         @if (Model != null)
@@ -15,18 +15,18 @@
 
                     <p>
                         @Model.DisplayName
-                    @Model.Years jaar oud
-                </p>
-                <div class="col-md-12">
-                    <div class="col-md-6">
-                        @Html.ActionLink(" ", "Dislike", "Home", new { id = Model.ID }, new { id = "facedate_Dislike" })
-                    </div>
-                    <div class="col-md-6">
-                        @Html.ActionLink(" ", "Like", "Home", new { id = Model.ID }, new { id = "facedate_Like" })
+                        @Model.Years jaar oud
+                    </p>
+                    <div class="col-md-12">
+                        <div class="col-md-6">
+                            @Html.ActionLink(" ", "Dislike", "Home", new { id = Model.ID }, new { id = "facedate_Dislike", onclick = "rate($(this).attr('href'));" })
+                        </div>
+                        <div class="col-md-6">
+                            @Html.ActionLink(" ", "Like", "Home", new { id = Model.ID }, new { id = "facedate_Like", onclick = "rate($(this).attr('href'));" })
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
         }
         else
         {
