--- a/Aphrodite/Aphrodite.Front/Views/Account/Login.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Account/Login.cshtml
@@ -27,11 +27,11 @@
                         @Html.ValidationMessage("InvalidLogin", new { @class = "text-danger" })
                         <div class="form-group">
                             @Html.TextBoxFor(m => m.Email, new { @class = "txt-input", placeholder = "E-mailadres", autocomplete = "off" })
-                            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger-light" })
                         </div>
                         <div class="form-group">
                             @Html.PasswordFor(m => m.Password, new { @class = "txt-input", placeholder = "Wachtwoord" })
-                            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger-light" })
                         </div>
                         <div class="form-group">
                             <input type="submit" value="Inloggen" class="login-btn" />
