--- a/Aphrodite/Aphrodite.Front/Content/Site.css
+++ b/Aphrodite/Aphrodite.Front/Content/Site.css
@@ -352,3 +352,30 @@ a.edit-link {
     position: relative;
     top: 10px;
 }
+
+/* The MatchIndex*/
+
+a.selected {
+  background-color:#1F75CC;
+  color:white;
+  z-index:100;
+}
+
+.messagepop {
+  background-color:#FFFFFF;
+  border:1px solid #999999;
+  cursor:default;
+  display:none;
+  margin-top: 15px;
+  position:absolute;
+  text-align:left;
+  width:394px;
+  z-index:50;
+  padding: 25px 25px 20px;
+}
+
+.messagepop p, .messagepop.div {
+  border-bottom: 1px solid #EFEFEF;
+  margin: 8px 0;
+  padding-bottom: 8px;
+}
