--- a/Aphrodite/Aphrodite.Front/Views/Shared/_Layout.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Shared/_Layout.cshtml
@@ -8,6 +8,10 @@
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/Scripts/jquery.signalR-2.2.0.min.js")
+    @Scripts.Render("~/signalr/hubs")
+    @Scripts.Render("~/Scripts/MatchesHub.js")
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
