--- a/Aphrodite/Aphrodite.Front/Content/Site.css
+++ b/Aphrodite/Aphrodite.Front/Content/Site.css
@@ -37,6 +37,7 @@ body.fd-background-color {
 }
 
 .text-danger-light {
+    text-align: left;
     color: #fff;
 }
 
@@ -177,6 +178,10 @@ label {
     color: #e3a3a3;
 }
 
+#login-form .form-group {
+    text-align: center;
+}
+
 .login-btn {
     width: 100%;
     height: 35px;
@@ -237,6 +242,13 @@ label {
 .navbar-brand {
     background: url(../Content/img/facedate_logo_normal.png) no-repeat top left;
     display: block;
+}
+
+span#count-notification {
+    position: absolute;
+    right: 10px;
+    top: 0px;
+    color: #fff;
 }
 
 /* Manage page*/
@@ -351,4 +363,14 @@ a.edit-link {
 .like_box {
     position: relative;
     top: 10px;
+}
+
+.no-more-matches {
+    padding: 25px;
+    background-color: #fff;
+    text-align: center;
+}
+
+.no-more-matches label {
+    color: #727272;
 }
