--- a/Aphrodite/Aphrodite.Front/Content/Site.css
+++ b/Aphrodite/Aphrodite.Front/Content/Site.css
@@ -134,6 +134,18 @@ h2, h3, h4 {
     color: #727272;
 }
 
+.notification-container {
+    text-align:center;
+}
+
+.notification {
+    display: block;
+    padding: 10px;
+    background-color: #ed5656;
+    color: #fff;
+    font-weight: bold;
+}
+
 .block {
     background-color: #fff;
     border: 1px solid #ccc;
@@ -177,6 +189,7 @@ label {
 #login-form ::-webkit-input-placeholder { /* WebKit browsers */
     color: #e3a3a3;
 }
+
 
 #login-form .form-group {
     text-align: center;
@@ -376,6 +389,18 @@ a.edit-link {
 }
 
 /* The MatchIndex*/
+
+.match-block {
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color: #fff;
+}
+
+.profile-image-small-round {
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+}
 
 a.selected {
   background-color:#1F75CC;
