--- a/Aphrodite/Aphrodite.Front/Views/Shared/_Layout.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
+        <div class="notification-container">
+            <span class="notification"></span>
+        </div>
     </div>
     <div class="container body-content">
         @RenderBody()
