--- a/Aphrodite/Aphrodite.Front/Views/Manage/Index.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Manage/Index.cshtml
@@ -17,7 +17,7 @@
             <a href="#" data-toggle="modal" data-target="#facedatemodal">
                 <span id="message"></span>
                 <div id="facedate-img">
-                    <img src="@Url.Content(Model.Photo)" class="photosize" />
+                    <span><img id="profile-image" src="@Url.Content(Model.Photo)" class="photosize" /></span>
                 </div>
 </a>
          </div>
@@ -81,5 +81,6 @@
         @Html.ActionLink("Verander wachtwoord", "ChangePassword")
 </div>
 <script src="/Scripts/resample.js"></script>
+<script src="/Scripts/Facedate.js"></script>
 
 
