Code clean up facedate.js implemented the resize and position function on the homepage

--- a/Aphrodite/Aphrodite.Front/Views/Home/ProfilePartialAjax.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Home/ProfilePartialAjax.cshtml
@@ -7,7 +7,7 @@
     @Scripts.Render("~/Scripts/Facedate.js")
     <div id="profile-box" class="center-block">
         <div class="profile-image">
-            <img id="facedate_Image" src="@Url.Content(@ViewBag.PhotoFile)" class="photosize img-responsive" />
+            <img id="profile-image" src="@Url.Content(@ViewBag.PhotoFile)" class="photosize img-responsive" />
         </div>
         <div class="col-md-12 like_box">
 
