--- a/Aphrodite/Aphrodite.Front/Views/Shared/_ProfilePartial.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Shared/_ProfilePartial.cshtml
@@ -7,7 +7,7 @@
         {
             <div id="profile-box" class="center-block">
                 <div class="profile-image">
-                    <img id="facedate_Image" src="@Url.Content(@ViewBag.PhotoFile)" class="photosize img-responsive" />
+                    <img id="profile-image" src="@Url.Content(@ViewBag.PhotoFile)" class="photosize img-responsive" />
                 </div>
 
                 <div class="col-md-12 like_box">
