Added Image container

--- a/Aphrodite/Aphrodite.Front/Views/Match/Index.cshtml
+++ b/Aphrodite/Aphrodite.Front/Views/Match/Index.cshtml
@@ -30,6 +30,7 @@ else
     <p>This is your date for tonight! : </p>
     <p class="RecieverName">
     </p>
+    <img src="" class="photosize" /> 
     <a class="close" href="/">Cancel</a>
 </div>
 <script>
